# velo-tracker

./: .gitignore  .mise.toml  CLAUDE.md  FENRIR.md  Makefile  Procfile  README.md  TODO.md  app.json  app.py  bootstrap.sh  cli.py  climbs.py  coach.py  config.py  docker-compose.yml  fit_export.py  garmin.py  icu.py  intervals.py  models.py  pyproject.toml  routes.py  sync.py
.claude/: settings.local.json
.claude/skills/: daisyui.md  fit-workout.skill
.devcontainer/: README.md  devcontainer.json  docker-compose.override.yml  docker-compose.yml  setup.sh
alembic/: env.py
alembic/versions/: 304f9ccbcf15_add_steps_tss_to_trainingsession.py  573a4aff37d9_add_icu_event_id_to_trainingsession.py  73a1130e2fc8_add_activity_id_to_trainingsession.py  80effe9b74af_add_icu_compliance_to_trainingsession.py  8f2751cba3d3_drop_goal_plan_tables.py  a1b2c3d4e5f6_add_training_phase1.py  a9dc85782eb0_add_rpe_feel_notes.py  b2c3d4e5f6a1_availability_calendar.py  b3f1a2c4d5e6_garmin_connect_migration.py  b9eb4c151b35_training_week_stale.py  c3d4e5f6a1b2_add_training_plan.py  c4e2f7a8b9d1_wipe_icu_data.py  c5748495dc29_initial.py  d4e5f6a1b2c3_session_steps.py  d5a3b1c7e9f2_add_polyline.py  e35d6b485acf_plan_owned_availability.py  (+3 more)
prompts/: rationale.j2  regenerate_stale.j2  session_steps.j2  skeleton.j2
static/: style.css
templates/: base.html  dashboard.html  profile.html
tests/: conftest.py  factories.py  test_context.py  test_duration.py  test_fit_export.py  test_fmt.py  test_icu_push.py  test_pmc.py  test_regen.py  test_skeleton_validation.py  test_sync.py
(+20 files in other folders)
