[project]
name = "velo-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click",
    "flask",
    "sqlmodel",
    "alembic",
    "python-dotenv",
    "gunicorn",
    "psycopg2-binary",
    "flask-fenrir>=0.4.0",
    "garminconnect>=0.2.38",
    "geohash2",
    "anthropic",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-playwright",
    "ruff",
    "pyright",
]
