[project]
name = "velo-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click",
    "flask",
    "sqlmodel",
    "alembic",
    "python-dotenv",
    "gunicorn",
    "psycopg2-binary",
    "flask-fenrir>=0.4.0",
    "garminconnect>=0.2.38",
    "geohash2",
    "anthropic",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
]

[tool.pyright]
exclude = ["alembic", ".venv"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-playwright",
    "ruff",
    "pyright",
]
